# augini

./: .gitignore  404.html  LICENSE  README.md  config.py  directory_contents.md  files.py  index.html  mkdocs.yml  publish.sh  pyproject.toml  requirements.txt  serve_docs.sh  sitemap.xml
.github/workflows/: docs.yml  main.yml  workflow.yml
Learn Augini/What is Augini about/: index.html
api-reference/: index.html
augini/: __init__.py  augment.py  chat.py  config.py  core.py  data_analyzer.py  data_engineer.py  exceptions.py  interactivechat.py  synth.py  tools.py  utils.py  web_components.py
chat/: index.html
data-analyzer/: index.html
data-engineer/: index.html
docs/: api-reference.md  chat.md  data-analyzer.md  data-engineer.md  index.md  provider-agnostic.md  quick-start.md
docs/Learn Augini/: What is Augini about.md
docs/stylesheets/: extra.css
examples/: augini_example_churn.ipynb  play.ipynb  portfolio_optimization.ipynb  test_augini.py
examples/Cookbook/: portfolio_optimization.ipynb
provider-agnostic/: index.html
quick-start/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/Learn Augini/What is Augini about/: index.html
site/search/: search_index.json
tests/: __init__.py  conftest.py  test_augini.py  test_data_analyzer.py  test_data_engineer.py
